[gd_scene load_steps=7 format=3 uid="uid://ca0ohfqspp2pg"]

[ext_resource type="Script" path="res://scripts/fishing/fishing.gd" id="1_cx5po"]
[ext_resource type="PackedScene" uid="uid://wus354uwp5a2" path="res://scenes/fishing/distractions/distraction_kuoja.tscn" id="2_c7rp6"]
[ext_resource type="PackedScene" uid="uid://b4grfvgpri7y5" path="res://scenes/fishing/distractions/distraction_wind.tscn" id="3_6f0le"]
[ext_resource type="PackedScene" uid="uid://c1y8dfahi1fuc" path="res://scenes/fishing/distractions/distraction_raude.tscn" id="3_wl1pp"]
[ext_resource type="PackedScene" uid="uid://bbla6hg7d0ct1" path="res://scenes/fishing/distractions/distraction_lynas.tscn" id="4_pwytj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vewt5"]
size = Vector3(40, 8, 40)

[node name="FishingWater" type="Area3D"]
collision_layer = 512
collision_mask = 524290
monitorable = false
linear_damp_space_override = 1
linear_damp = 5.0
angular_damp_space_override = 1
angular_damp = 5.0
script = ExtResource("1_cx5po")
trial_wait_time_randomness = 0.1
distraction_time = 3.0
distraction_time_randomness = 0.2

[node name="FishingWaterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
shape = SubResource("BoxShape3D_vewt5")

[node name="TrialTimer" type="Timer" parent="."]
one_shot = true

[node name="CatchTimer" type="Timer" parent="."]
one_shot = true

[node name="DistractionTimer" type="Timer" parent="."]
one_shot = true

[node name="DistractionKuoja" parent="." instance=ExtResource("2_c7rp6")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, -15.2739)

[node name="DistractionRaude" parent="." instance=ExtResource("3_wl1pp")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, -13.2512)

[node name="DistractionLynas" parent="." instance=ExtResource("4_pwytj")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, -15.2951)

[node name="DistractionWind" parent="." instance=ExtResource("3_6f0le")]

[connection signal="body_entered" from="." to="." method="_on_water_entered"]
[connection signal="body_exited" from="." to="." method="_on_water_exited"]
[connection signal="timeout" from="TrialTimer" to="." method="_on_trial_timer_timeout"]
[connection signal="timeout" from="CatchTimer" to="." method="_on_catch_timer_timeout"]
[connection signal="timeout" from="DistractionTimer" to="." method="_on_distraction_timer_timeout"]
